service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: test-docker-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8005
  type: NodePort
